force-app/main/default/objects/HelloSign__Log__c/HelloSign__Log__c.object-meta.xml
<CustomObject>
    <description>Logging table to capture exceptions and issues for troubleshooting</description>
    <label>Dropbox Sign Log</label>
    <nameField>
        <displayFormat>LOG-{00000000}</displayFormat>
        <label>Log#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dropbox Sign Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>