force-app/main/default/objects/HelloSign__Log__c/fields/HelloSign__ClassName__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__ClassName__c</fullName>
    <description>String field on the Log custom object. Stores the class name where the log was written from.</description>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>