force-app/main/default/objects/HelloSign__Log__c/fields/HelloSign__Data__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Data__c</fullName>
    <description>String field on the Log custom object. Stores the optional relevant data.</description>
    <label>Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>