force-app/main/default/objects/HelloSign__Log__c/fields/HelloSign__Hidden_Test_Field__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Hidden_Test_Field__c</fullName>
    <description>String field on the Log custom object. A hidden test field for HSignTemplateServiceTest class</description>
    <label>Hidden Test Field</label>
    <length>25</length>
    <type>Text</type>
</CustomField>