force-app/main/default/objects/HelloSign__Log__c/fields/HelloSign__Level__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Level__c</fullName>
    <description>Dropdown field on the Log custom object. Sets the level of logging, informational, warning, or error.</description>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>WARNING</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>BATCH SEND WITH TEMPLATE ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>