force-app/main/default/objects/HelloSign__Log__c/fields/HelloSign__Message__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Message__c</fullName>
    <description>String field on the Log custom object. Stores a brief message describing the error</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>