force-app/main/default/objects/HelloSign__Log__c/fields/HelloSign__ObjectIds__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__ObjectIds__c</fullName>
    <description>String field on the Log custom object. Stores a comma delimited list of relevant object Ids.</description>
    <label>Object IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>