force-app/main/default/objects/HelloSign__Log__c/fields/HelloSign__RunningUser__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__RunningUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>String field on the Log custom object. Stores the running user at the time the log was created.</description>
    <label>Running User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HelloSign_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>