force-app/main/default/objects/HelloSign__Log__c/fields/HelloSign__StackTrace__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__StackTrace__c</fullName>
    <description>String field on the Log custom object. Stores the apex stack trace.</description>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>