force-app/main/default/objects/HelloSign__Log__c/listViews/HelloSign__All.listView-meta.xml
<ListView>
    <fullName>HelloSign__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>HelloSign__RunningUser__c</columns>
    <columns>HelloSign__Level__c</columns>
    <columns>HelloSign__Message__c</columns>
    <columns>HelloSign__ClassName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>